# gce-backend

./: Cargo.toml  README.md  go.mod  go.sum  main.go  vercel.json
api/: index.go  vercel.go  vercel.rs
configs/: config.go
database/: users.db.go  users.go
docs/: docs.go  swagger.json  swagger.yaml
middleware/: jwt.go
models/: user.go  user.model.go
routes/: default.go  user.go  user.route.go
services/user/: index.go  user.service.go  validation.go
src/: lib.rs  main.rs
src/handlers/: intro.rs
src/routes/: root_routes.rs
utils/: response.go
