[package]
name = "gce-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full", "rt-multi-thread"] }
tower = "0.4.13"
tower-service = "0.3.2"
tracing-subscriber = "0.3.18"
vercel_runtime = "1.1.1"

[[bin]]
name = "vercel"
path = "api/vercel.rs"